--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -3151,24 +3151,24 @@ input:checked + .toggleSwitchSlider:before {
 .mediaButton:hover #settingsSVG,
 .mediaButton:focus #settingsSVG,
 .mediaButton:active #settingsSVG {
-	height: 27px;
+	height: 25px;
 }
 
 /* Settings tooltip styles. */
 #settingsTooltip {
 	visibility: hidden;
 	opacity: 0;
-	width: 75px;
 	height: 20px;
 	background-color: rgba(0, 0, 0, 0.75);
 	text-align: center;
 	border-radius: 4px;
 	position: absolute;
 	z-index: 1;
-	left: -11%;
-	top: -120%;
+	right: -3.5%;
+	top: -140%;
 	font-size: 12px;
 	line-height: 20px;
+	padding: 2px 10px;
 	transition:
 		visibility 0s linear 0.25s,
 		opacity 0.25s ease;
